Use OpenMP management by CMake

--- a/gatb-core/CMakeLists.txt
+++ b/gatb-core/CMakeLists.txt
@@ -14,34 +14,29 @@ set (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 include (DefineInteger)
 DefineInteger (k)
 
+################################################################################
+# OPENMP MANAGEMENT
+################################################################################
+find_package(OpenMP)
+
+if (OPENMP_FOUND)
+    set (COMPILE_DEFINITIONS   "${COMPILE_DEFINITIONS} ${OpenMP_C_FLAGS}")
+endif()
 
 ################################################################################
 # GENERAL DEFINITIONS
 ################################################################################
 if (debug)
-    #add_definitions (${add_definitions}  -g -p -pg)
     set (COMPILE_DEFINITIONS  "${COMPILE_DEFINITIONS} -g -p -pg")
     message("-- COMPILATION IN DEBUG MODE")
 else()
-    #add_definitions (${add_definitions}  -O3 -funroll-loops  -fomit-frame-pointer)
     set (COMPILE_DEFINITIONS  "${COMPILE_DEFINITIONS} -O3 -funroll-loops  -fomit-frame-pointer")
 endif()
 
-#add_definitions (${add_definitions}  -DINTEGER_KIND=${INTEGER_KIND}  -DKMER_PRECISION=${KMER_PRECISION})
 set (COMPILE_DEFINITIONS  "${COMPILE_DEFINITIONS}  -DINTEGER_KIND=${INTEGER_KIND}  -DKMER_PRECISION=${KMER_PRECISION}")
 
 if (INT128_FOUND)
-    #add_definitions (${add_definitions}  -DINT128_FOUND)
     set (COMPILE_DEFINITIONS  "${COMPILE_DEFINITIONS}  -DINT128_FOUND")
-endif()
-
-if (omp)
-    set (OMP "-fopenmp")
-    #add_definitions (${add_definitions} -DOMP ${OMP})
-    set (COMPILE_DEFINITIONS "${COMPILE_DEFINITIONS}  -DOMP ${OMP}")
-    message("-- OpenMP USED")
-else()
-    message("-- OpenMP NOT USED")
 endif()
 
 message("-- Options: ${COMPILE_DEFINITIONS}")
@@ -93,19 +88,19 @@ set (gatb-core-libraries   GatbTools-static  dl  pthread  z  ${OMP}  PARENT_SCOP
 ################################################################################
 #  UNIT TESTS GENERATION 
 ################################################################################
-#ADD_SUBDIRECTORY(test)
+ADD_SUBDIRECTORY(test)
 
 ################################################################################
 #  DOCUMENTATION GENERATION 
 ################################################################################
-#ADD_SUBDIRECTORY(doc)
+ADD_SUBDIRECTORY(doc)
 
 ################################################################################
 #  EXAMPLES GENERATION 
 ################################################################################
-#ADD_SUBDIRECTORY(examples)
+ADD_SUBDIRECTORY(examples)
 
 ################################################################################
 #  TOOLS GENERATION 
 ################################################################################
-#ADD_SUBDIRECTORY(tools)
+ADD_SUBDIRECTORY(tools)
