Better db path management

--- a/gatb-core/test/unit/CMakeLists.txt
+++ b/gatb-core/test/unit/CMakeLists.txt
@@ -35,4 +35,4 @@ target_link_libraries (GatbToolsTest     GatbTools-static  ${CPPUNIT_LIBRARY}  d
 ################################################################################
 
 # We add an optional target for launching unit tests
-add_custom_target (test GatbToolsTest unittests.xml)
+add_custom_target (test GatbToolsTest ${org.inria.gatb.tools_SOURCE_DIR}/test/db  unittests.xml)
