--- a/gatb-core/doc/CMakeLists.txt
+++ b/gatb-core/doc/CMakeLists.txt
@@ -5,6 +5,6 @@ if (DOXYGEN_FOUND)
 
     CONFIGURE_FILE (${CMAKE_CURRENT_SOURCE_DIR}/doxygen/gatb.doxyfile  ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile  @ONLY)
     
-    ADD_CUSTOM_TARGET (doc ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
+    ADD_CUSTOM_TARGET (doc ALL ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
     
 endif (DOXYGEN_FOUND)
