--- a/gatb-core/test/CMakeLists.txt
+++ b/gatb-core/test/CMakeLists.txt
@@ -1,9 +1,9 @@
 ################################################################################
 #  UNIT TESTS GENERATION 
 ################################################################################
-ADD_SUBDIRECTORY(unit)
+ADD_SUBDIRECTORY (unit)
 
 ################################################################################
 #  BENCHMARK TESTS GENERATION 
 ################################################################################
-ADD_SUBDIRECTORY(benchmark)
+ADD_SUBDIRECTORY (benchmark EXCLUDE_FROM_ALL)
