--- a/gatb-core/test/benchmark/CMakeLists.txt
+++ b/gatb-core/test/benchmark/CMakeLists.txt
@@ -8,5 +8,5 @@ list (APPEND PROGRAMS bench1 bench_bloom)
 
 FOREACH (program ${PROGRAMS})
   add_executable(${program} ${program}.cpp)
-  target_link_libraries(${program} GatbTools-static   dl pthread z)
+  target_link_libraries(${program} ${gatb-core-libraries})
 ENDFOREACH (program)
