--- a/gatb-core/test/unit/CMakeLists.txt
+++ b/gatb-core/test/unit/CMakeLists.txt
@@ -16,4 +16,4 @@ target_link_libraries (GatbToolsTest    ${gatb-core-libraries} ${CPPUNIT_LIBRARY
 ################################################################################
 
 # We add an optional target for launching unit tests
-add_custom_target (test GatbToolsTest ${org.inria.gatb.tools_SOURCE_DIR}/test/db  unittests.xml)
+add_custom_target (test GatbToolsTest  "All Tests"  ${org.inria.gatb.tools_SOURCE_DIR}/test/db  unittests.xml)
