--- a/gatb-core/src/CMakeLists.txt
+++ b/gatb-core/src/CMakeLists.txt
@@ -4,6 +4,9 @@
 
 file (GLOB_RECURSE  ComponentFiles  *)
 
+# WARNING !!! For the moment, we need to remove some warnings (on Macos) due to use of offsetof macro on non Plain Old Data
+set (COMPILE_DEFINITIONS  "${COMPILE_DEFINITIONS}  -Wno-invalid-offsetof")
+
 include_directories (${gatb-core-includes})
 
 add_library    (gatbcore-static  STATIC  ${ComponentFiles} )
