--- a/gatb-core/CMakeLists.txt
+++ b/gatb-core/CMakeLists.txt
@@ -29,7 +29,8 @@ endif()
 # GENERAL DEFINITIONS
 ################################################################################
 if (debug)
-    set (COMPILE_DEFINITIONS  "${COMPILE_DEFINITIONS} -g -p -pg")
+    #set (COMPILE_DEFINITIONS  "${COMPILE_DEFINITIONS} -g -p -pg")
+    set (COMPILE_DEFINITIONS  "${COMPILE_DEFINITIONS} -g -p")
     message("-- COMPILATION IN DEBUG MODE")
 else()
     set (COMPILE_DEFINITIONS  "${COMPILE_DEFINITIONS} -O3")
@@ -46,20 +47,11 @@ message("-- Options: ${COMPILE_DEFINITIONS}")
 add_definitions (${COMPILE_DEFINITIONS})
 
 ################################################################################
-#  LIBRARY GENERATION 
+#  DIRECTORIES MANAGEMENT 
 ################################################################################
 
-set (LIBRARY_OUTPUT_PATH    lib/${CMAKE_BUILD_TYPE})
-
-file (GLOB_RECURSE  ComponentFiles  src/*)
-
-include_directories (src  src/gatb/tools)
-
-add_library    (GatbTools-static  STATIC  ${ComponentFiles} )
-#add_library    (GatbTools-dynamic SHARED  ${ComponentFiles} )
-
-set_target_properties (GatbTools-static   PROPERTIES OUTPUT_NAME  GatbTools  clean_direct_output 1)
-#set_target_properties (GatbTools-dynamic  PROPERTIES OUTPUT_NAME  GatbTools  clean_direct_output 1)
+set (LIBRARY_OUTPUT_PATH       ${PROJECT_BINARY_DIR}/lib/${CMAKE_BUILD_TYPE})
+set (EXECUTABLE_OUTPUT_PATH    ${PROJECT_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE})
 
 ################################################################################
 #  EXPORT FOR THIRD PARTIES 
@@ -69,10 +61,15 @@ set_target_properties (GatbTools-static   PROPERTIES OUTPUT_NAME  GatbTools  cle
 set (gatb-core-flags ${COMPILE_DEFINITIONS})
 
 # We define the include directories used for linking binary based on gatb core
-set (gatb-core-includes   ${CMAKE_CURRENT_SOURCE_DIR}/src  ${CMAKE_CURRENT_SOURCE_DIR}/src/gatb/tools)
+set (gatb-core-includes   
+    ${PROJECT_SOURCE_DIR}/src  
+    ${PROJECT_SOURCE_DIR}/src/gatb/tools  
+    ${PROJECT_SOURCE_DIR}/thirdparty/hdf5/src
+    ${PROJECT_BINARY_DIR}/thirdparty/hdf5  
+)
 
 # We define the libraries used for linking binary based on gatb core
-set (gatb-core-libraries   GatbTools-static  dl  pthread  z  ${OpenMP_C_FLAGS})
+set (gatb-core-libraries   gatbcore-static  dl  pthread  z hdf5  ${OpenMP_C_FLAGS} )
 
 # NOTE... we have to duplicate the variables for the other scopes (in particular for sub directories)
 set (gatb-core-flags     ${gatb-core-flags}     PARENT_SCOPE)
@@ -80,11 +77,31 @@ set (gatb-core-includes  ${gatb-core-includes}  PARENT_SCOPE)
 set (gatb-core-libraries ${gatb-core-libraries} PARENT_SCOPE)
 
 ################################################################################
+#  LIBRARY GENERATION 
+################################################################################
+ADD_SUBDIRECTORY(src)
+
+################################################################################
 #  UNIT TESTS GENERATION 
 ################################################################################
 IF (DEFINED CPPUNIT_FOUND)
-    ADD_SUBDIRECTORY(test )
+    ADD_SUBDIRECTORY (test EXCLUDE_FROM_ALL)
 ENDIF()
+
+################################################################################
+#  TOOLS GENERATION 
+################################################################################
+ADD_SUBDIRECTORY(tools)
+
+################################################################################
+#  THIRD PARTY GENERATION (
+################################################################################
+ADD_SUBDIRECTORY(thirdparty)
+
+################################################################################
+#  DEPENDENCIES 
+################################################################################
+ADD_DEPENDENCIES (gatbcore-static hdf5)
 
 ################################################################################
 #  DOCUMENTATION GENERATION 
@@ -96,7 +113,3 @@ ADD_SUBDIRECTORY(doc EXCLUDE_FROM_ALL)
 ################################################################################
 ADD_SUBDIRECTORY(examples EXCLUDE_FROM_ALL)
 
-################################################################################
-#  TOOLS GENERATION 
-################################################################################
-ADD_SUBDIRECTORY(tools EXCLUDE_FROM_ALL)
