Add dbgcheck binary

--- a/gatb-core/tools/CMakeLists.txt
+++ b/gatb-core/tools/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 include_directories (${gatb-core-includes})
 
-list (APPEND PROGRAMS dbgh5)
+list (APPEND PROGRAMS dbgh5 dbgcheck)
 
 FOREACH (program ${PROGRAMS})
   add_executable(${program} ${program}.cpp)
