--- a/gatb-core/CMakeLists.txt
+++ b/gatb-core/CMakeLists.txt
@@ -3,6 +3,11 @@ project(org.inria.gatb.tools)
 cmake_minimum_required (VERSION 2.6)
 
 ################################################################################
+# Boost
+################################################################################
+find_package (Boost REQUIRED)
+
+################################################################################
 # Define cmake modules directory
 ################################################################################
 set (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
