Few improvement about Node

--- a/gatb-core/test/unit/CMakeLists.txt
+++ b/gatb-core/test/unit/CMakeLists.txt
@@ -2,16 +2,16 @@
 #  CPPUNIT 
 ################################################################################
 
-file (GLOB_RECURSE  GatbToolsTestFiles  src/*)
+file (GLOB_RECURSE  GatbCoreTestFiles  src/*)
 
 include_directories (${gatb-core-includes}  ${org.inria.gatb.tools_SOURCE_DIR}/test/unit/src  ${CPPUNIT_INCLUDE_DIR})
 
-add_executable        (GatbToolsTest    ${GatbToolsTestFiles})
-target_link_libraries (GatbToolsTest    ${gatb-core-libraries} ${CPPUNIT_LIBRARY})
+add_executable        (GatbCoreTest    ${GatbCoreTestFiles})
+target_link_libraries (GatbCoreTest    ${gatb-core-libraries} ${CPPUNIT_LIBRARY})
 
 ################################################################################
 #  LAUNCH 
 ################################################################################
 
 # We add an optional target for launching unit tests
-add_custom_target (test GatbToolsTest  "All Tests"  ${org.inria.gatb.tools_SOURCE_DIR}/test/db  unittests.xml)
+add_custom_target (test GatbCoreTest  "All Tests"  ${org.inria.gatb.tools_SOURCE_DIR}/test/db  unittests.xml)
